src/styles/main.css
#main-container {
  height: 92%;
  width: 90%;
  padding-top: 1.5rem;
}

.header-container {
  margin-bottom: 2rem;
  .header {
    margin-right: 14px;
    display: flex;
    justify-content: space-between;
    align-items: center;
    .balance {
      cursor: pointer;
      .title {
        text-align: center;
        margin-bottom: 0.4rem;
        font-size: 0.8rem;
      }

      .value {
        text-align: center;
        .primary {
          font-size: 1.2rem;
          text-align: center;
        }
        .secondary {
          color: var(--color-secondary);
          margin-top: 0.2rem;
          text-align: center;
        }
      }
    }
    .links {
      display: flex;
      justify-content: space-around;
      align-items: center;
      font-size: 1.1rem;
      svg {
        width: 28px;
        height: 28px;
      }
      .menu-icon {
        display: flex;
        cursor: pointer;
        font-size: 1.25rem;
        color: var(--color-links);
      }
    }
  }
}

.wallets-header-container {
  margin: 2.5rem auto;
  display: flex;
  justify-content: space-between;
  max-width: 375px;

  svg {
    width: 18px;
    height: 18px;
  }

  .sats {
    display: flex;
    justify-content: space-between;
    flex-grow: 1;
    background-color: var(--color-light-bg);
    border: thin solid var(--color-borders);
    border-radius: 0.4rem;
    .label {
      color: var(--color-btcPrimary);
      background-color: var(--color-btcSecondary);
      border-right: thin solid var(--color-bg);
      border-radius: 0.4rem 0 0 0.4rem;
      display: flex;
      justify-content: center;
      align-items: center;
      div {
        transform: rotate(270deg);
        font-weight: bold;
      }
    }
    .balances {
      flex-grow: 1;
      text-align: left;
      padding: 0.25rem 0.75rem;
      .primary {
        margin: 0.2rem auto;
        font-size: 1.2rem;
      }
      .secondary {
        font-size: 0.75rem;
        color: gray;
      }
    }
  }

  .divider {
    display: flex;
    align-items: center;
    background-color: var(--color-dark-bg);
    border: thin solid var(--color-borders);
    border-radius: 50%;
    justify-content: center;
    margin: 0 -18px;
    z-index: 1;
    a {
      padding: 1rem;
      display: block;
      svg {
        width: 100%;
        height: 100%;
      }
    }
  }

  .usd {
    display: flex;
    justify-content: space-between;
    flex-grow: 1;
    background-color: var(--color-light-bg);
    border: thin solid var(--color-borders);
    border-radius: 0.4rem;
    .label {
      color: var(--color-usdPrimary);
      background-color: var(--color-usdSecondary);
      border-left: thin solid var(--color-bg);
      border-radius: 0 0.4rem 0.4rem 0;
      display: flex;
      justify-content: center;
      align-items: center;
      div {
        transform: rotate(90deg);
        font-weight: bold;
      }
    }
    .balances {
      flex-grow: 1;
      text-align: right;
      padding: 0.25rem 0.75rem;
      display: flex;
      .usd-balance {
        display: flex;
        justify-content: flex-end;
        align-items: center;
        flex-grow: 1;
        font-size: 1.2rem;
      }
    }
  }
}

.header-nav {
  margin: 1rem auto;
  display: flex;
  flex-direction: row;
  a {
    margin: 1rem auto;
    border: thin solid var(--color-borders);
    border-radius: 0.25rem;
    padding: 0.5rem 1.75rem;
    background-color: var(--color-light-bg);
    width: 75%;
    max-width: 225px;
    display: flex;
    align-items: center;
    justify-content: center;
    .button-label {
      display: flex;
      align-items: center;
    }
  }
  .scan {
    svg {
      color: var(--color-btcSecondary);
    }
  }
  .send {
    svg {
      color: var(--color-send);
    }
  }
  .receive {
    svg {
      color: var(--color-receive);
    }
  }
  .active {
    background-color: var(--color-active-bg);
    font-weight: bold;
    color: var(--color-primary);
  }
}

.fee-amount {
  padding: 0.75rem;
  border: thin dashed var(--color-borders);
  display: flex;
  justify-content: center;
  align-items: center;
  margin: 1.75rem auto;
  .label {
    margin-right: 0.75rem;
    font-weight: bold;
  }
  .fee-usd-amount {
    text-align: left;
  }
}

.transaction-list {
  .transaction-item {
    background-color: var(--color-light-bg);
    border: thin solid var(--color-borders);
  }
}

.amount-input-form {
  width: 100%;
  display: flex;
  justify-content: center;
  align-items: center;
  .currency-label {
    margin-right: 0.5rem;
    font-size: 1.5rem;
  }
  .toggle-currency {
    cursor: pointer;
    margin-left: 0.5rem;
    font-size: 1.5rem;
  }
}

.note-input {
  textarea {
    font-size: 0.9rem;
  }
}

.action-container {
  padding-top: 1rem;
}

.invoice-status {
  margin: 1.5rem;
}

.amount-converted {
  max-width: 375px;
  margin: 0 auto;
  margin-top: 1rem;
  text-align: center;
  .converted-sats {
  }
  .converted-usd {
    margin-top: 0.3rem;
    color: var(--color-secondary);
  }
}

.suspense-fallback,
.error-fallback {
  display: block;
  padding: 25% 5%;
  text-align: center;
  pre {
    white-space: pre-wrap;
  }
}

.tabs {
  max-width: 400px;
  margin: 0 auto;
  display: flex;
  justify-content: center;
  margin-bottom: 1.5rem;
  .tab {
    width: 100%;
    border: thin solid var(--color-borders);
    padding: 0.5rem;
    text-align: center;
  }
  .active {
    background-color: var(--color-active-bg);
    font-weight: bold;
    color: var(--color-primary);
  }
}

#main-container {
  margin: 0 auto;
  max-width: 1024px;
  display: flex;
  flex-direction: column;
}

#powered-by {
  width: 100%;
  padding-top: 4rem;
  padding-bottom: 2rem;
  background-color: var(--color-bg);
  .content {
    font-size: 0.85rem;
    color: var(--color-secondary);
    text-align: center;
  }
}
/* ... */

